--- a/homepage.html
+++ b/homepage.html
@@ -14,13 +14,14 @@
       <section class="navigation_div">
         <div class="sectiondiv">
           <nav>
-          <div class="container">
+    
+
+          <div class="nav_logo_input_icons_text">
+            <div class="container">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
           </div>
-
-          <div class="nav_logo_input_icons_text">
             <div class="logo_image_div">
               <img src="images/malticalogo.png" alt="" style="display: block; max-width: 91px;" class="malticla_logo_image" />
             </div>
@@ -70,7 +71,7 @@
                 </div>
                 <div class="my_items_div">
                   <h6
-                    class="my_item_account_text"
+                    class="my_item_account_text text_one"
                     style="color: #ffffff; font-family: Poppins-SemiBold"
                   >
                     My Items
@@ -78,7 +79,7 @@
                 </div>
               </div>
 
-              <div class="nav_heart_recorder_child_one">
+              <div class="nav_heart_recorder_child_one  two">
                 <div class="account_signin_div">
                   <div class="account_div">
                     <img
@@ -98,7 +99,7 @@
                 </div>
                 <div class="account_text_div">
                   <h6
-                    class="my_item_account_text"
+                    class="my_item_account_text text_two"
                     style="color: #ffffff; font-family: Poppins-SemiBold"
                   >
                     Account
@@ -132,22 +133,14 @@
             <li class="nav-item">
               <a href="" class="nav_item_anchor">2-Hour Rated</a>
             </li>
-            <li
-              class="nav-item"
-              style="
-                width: 19%;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-              "
-            >
+            <li class="nav-item nav-item_truck">
               <i
-                class="fa fa-truck"
+                class="fa fa-truck" id="fa-truck"
                 style="color: white; font-size: 15px; margin-right: 10px"
                 aria-hidden="true"
               ></i>
 
-              <a href="" class="nav_item_anchor">Free Shipping on all Orders</a>
+              <a href="" class="nav_item_anchor" id="shipping_text" >Free Shipping on all Orders</a>
             </li>
           </ul>
           </div>
