--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,9 @@
             <div class="bar3"></div>
           </div>
             <div class="logo_image_div">
+              <a href="">
               <img src="images/malticalogo.png" alt="" style="display: block; max-width: 91px;" class="malticla_logo_image" />
+              </a>
             </div>
 
             <div class="office_type_div">
@@ -35,7 +37,7 @@
             </div>
             <div class="nav_input_div" id="nav_input_div">
              
-                  <i class="fa fa-search" style="color:#2b758f;"></i>
+                  <i class="fa fa-search " style="font-size:20px;color:#2b758f;"></i>
               <input 
                 type="text"
                 class="nav-input" id="nav-input"
@@ -114,7 +116,9 @@
                 ></i>
               </div>
             </div>
-          <ul class="nav-menue" id="nav_menue_items">
+
+            <div class="nav-menue_container">
+          <ul class="nav-menue_one"id="nav_menue_items">
             <li class="nav-item">
               <a href="" class="nav_item_anchor">File Cabinet</a>
             </li>
@@ -133,7 +137,10 @@
             <li class="nav-item">
               <a href="" class="nav_item_anchor">2-Hour Rated</a>
             </li>
-            <li class="nav-item nav-item_truck">
+         
+          </ul>
+          <ul class="nav-menue" id="nav_menue_two">
+               <li class="nav-item nav-item_truck">
               <i
                 class="fa fa-truck" id="fa-truck"
                 style="color: white; font-size: 15px; margin-right: 10px"
@@ -934,5 +941,3 @@
     ></script>
   </body>
 </html>
-
-
