--- a/product_image.html
+++ b/product_image.html
@@ -146,7 +146,7 @@
             </li>
          
           </ul>
-          <ul class="nav-menue" id="nav_menue_two">
+          <ul class="nav-menue_two" id="nav_menue_two">
                <li class="nav-item nav-item_truck">
               <i
                 class="fa fa-truck" id="fa-truck"
