--- a/ContactUsPage.html
+++ b/ContactUsPage.html
@@ -37,7 +37,7 @@
             </div>
             <div class="nav_input_div" id="nav_input_div">
              
-                  <i class="fa fa-search " style="font-size:20px;color:#2b758f;"></i>
+                  <i class="fa fa-search " style="font-size:15px;color:#2b758f;"></i>
               <input 
                 type="text"
                 class="nav-input" id="nav-input"
@@ -249,7 +249,9 @@
                     class="textareacontactus"
                   ></textarea>
                 </div>
+                <div class="send_button_contact_us">
                 <button class="sendbuttoncontactus">Submit</button>
+              </div>
               </div>
             </div>
           </div>
@@ -284,7 +286,7 @@
                 </li>
               </ul>
             </div>
-            <div>
+            <div class="footer_col-one">
               <h3 class="heading_li_footer">THE COMPANY</h3>
               <ul class="footer_ul">
                 <li><a href="" class="anchor_footer_li">About Us</a></li>
