--- a/Maltica News.html
+++ b/Maltica News.html
@@ -36,7 +36,7 @@
             </div>
             <div class="nav_input_div" id="nav_input_div">
              
-                  <i class="fa fa-search " style="font-size:20px;color:#2b758f;"></i>
+                  <i class="fa fa-search " style="font-size:15px;color:#2b758f;"></i>
               <input 
                 type="text"
                 class="nav-input" id="nav-input"
@@ -399,5 +399,11 @@
         <p class="copyright_footer">© 2023 Maltica . Powered by Shopify</p>
       </section>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="JavaScript.js"></script>
+    <script
+      src="https://kit.fontawesome.com/721e9d1116.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
