--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
             </div>
             <div class="nav_input_div" id="nav_input_div">
              
-                  <i class="fa fa-search " style="font-size:20px;color:#2b758f;"></i>
+                  <i class="fa fa-search " style="font-size:15px;color:#2b758f;"></i>
               <input 
                 type="text"
                 class="nav-input" id="nav-input"
@@ -182,38 +182,47 @@
       </section>
 
       <!------------- Section#2--------------------->
+
+
+<section>
+  <div class="sectiondiv">
+    <div class="right_product_view_container">
+      <div class="right_product_view_all_div">
+        <h4 class="rightproducttext">Which Product Is Right For You?</h4>
+        <a href="filecabinet.html" class="view_more"   style="color:#d83a3a; font-family: Poppins-SemiBold; text-decoration: none;font-size: 12px;">View All ></a>
+      </div>
+    </div>
+    </div>
+    </section>
       <section class="section_two">
         <div class="sectiondiv">
-          <div>
-            <h4 class="rightproducttext">Which Product Is Right For You?</h4>
-          </div>
           <div class="section_two_images_row_div">
             <div class="rowoneimages">
               <div class="cabinetcol">
                 <img src="images/Layer 60.png" class="cabinetimages" alt="" />
                 <div class="smalltext_div">
-                  <a href="" class="smalltext">Small/Home</a>
+                  <a href="filecabinet.html" class="smalltext">Small/Home ></a>
                 </div>
               </div>
 
               <div class="cabinetcol">
                 <img src="images/Layer 64.png" class="cabinetimages" alt="" />
                 <div class="smalltext_div">
-                  <a href="" class="smalltext">Commercial</a>
+                  <a href="filecabinet.html" class="smalltext">Commercial ></a>
                 </div>
               </div>
 
               <div class="cabinetcol">
                 <img src="images/Layer 62.png" class="cabinetimages" alt="" />
                 <div class="smalltext_div">
-                  <a href="" class="smalltext">Educational</a>
+                  <a href="filecabinet.html" class="smalltext">Educational ></a>
                 </div>
               </div>
 
               <div class="cabinetcol">
                 <img src="images/Layer 60.png" class="cabinetimages" alt="" />
                 <div class="smalltext_div">
-                  <a href="" class="smalltext">Medical</a>
+                  <a href="filecabinet.html" class="smalltext">Medical ></a>
                 </div>
               </div>
 
@@ -221,7 +230,7 @@
                 <img src="images/Layer 61.png" class="cabinetimages" alt="" />
 
                 <div class="smalltext_div">
-                  <a href="" class="smalltext">US Federal Government</a>
+                  <a href="filecabinet.html" class="smalltext">US Federal Government ></a>
                 </div>
               </div>
 
@@ -230,7 +239,7 @@
                   <img src="images/Layer 59.png" class="cabinetimages" alt="" />
                 </div>
                 <div class="smalltext_div">
-                  <a href="" class="smalltext">Bookcases</a>
+                  <a href="filecabinet.html" class="smalltext">Bookcases ></a>
                 </div>
               </div>
             </div>
@@ -246,49 +255,49 @@
               <ul class="ulsectionthree">
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Classic Vertical</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Classic Lateral</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >2-Hour Rated</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Turtle Series</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >FireShield</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Patriot Series</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Sure Seals</a
                   >
@@ -300,28 +309,28 @@
               <ul class="ulsectionthree">
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >File Cabinet</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Safes</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Storage Cabinet</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Fire and Water Chest</a
                   >
@@ -333,35 +342,35 @@
               <ul class="ulsectionthree">
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Shop All</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Home office/small office</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Commercial office</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Education</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Medical</a
                   >
@@ -373,56 +382,56 @@
               <ul class="ulsectionthree">
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Desks</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Storage Furniture</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Seating</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Tables</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Accents & Accessories</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Audio & Visual</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Beds</a
                   >
                 </li>
                 <li class="li-items-section-three">
                   <a
-                    href=""
+                    href="filecabinet.html"
                     style="color: #5e5e5e; font-family: Poppins-Regular"
                     >Delivery Upgrades</a
                   >
@@ -453,7 +462,7 @@
                 <a
                   style="color: #d83a3a; font-family: Poppins-SemiBold"
                   class="discover_more_section_four"
-                  >Discover more</a
+                  >Discover more ></a
                 >
               </div>
             </div>
@@ -474,7 +483,7 @@
                 <a
                   class="discover_more_section_four"
                   style="color: #d83a3a; font-family: Poppins-SemiBold"
-                  >Discover more</a
+                  >Discover more ></a
                 >
               </div>
             </div>
@@ -496,7 +505,7 @@
                 <a
                   style="color: #d83a3a; font-family: Poppins-SemiBold"
                   class="discover_more_section_four"
-                  >Discover more</a
+                  >Discover more ></a
                 >
               </div>
             </div>
@@ -723,7 +732,7 @@
                 />
               </div>
               <div class="section-eight-text-div">
-                <h3 class="section-eight-col-heading">File Cabinet</h3>
+                <h3 class="section-eight-col-heading">File Cabinet ></h3>
               </div>
             </div>
             <div class="sectioneightcol">
@@ -735,7 +744,7 @@
                 />
               </div>
               <div class="section-eight-text-div">
-                <h3 class="section-eight-col-heading">Storage Cabinet</h3>
+                <h3 class="section-eight-col-heading">Storage Cabinet ></h3>
               </div>
             </div>
             <div class="sectioneightcol">
@@ -747,7 +756,7 @@
                 />
               </div>
               <div class="section-eight-text-div">
-                <h3 class="section-eight-col-heading">Kids</h3>
+                <h3 class="section-eight-col-heading">Kids ></h3>
               </div>
            
             </div>
@@ -777,7 +786,7 @@
                   <h3 class="section_nine_col_heading">
                     A new fiber produced from Eucalyptus wood chips
                   </h3>
-                  <a href="" class="read_more_sectio_nine">Read More</a>
+                  <a href="Maltica News.html" class="read_more_sectio_nine">Read More ></a>
                 </div>
               </div>
               <div class="section_nine_col">
@@ -795,7 +804,7 @@
                   <h3 class="section_nine_col_heading">
                     A new fiber produced from Eucalyptus wood chips
                   </h3>
-                  <a href="" class="read_more_sectio_nine">Read More</a>
+                  <a href="Maltica News.html" class="read_more_sectio_nine">Read More ></a>
                 </div>
               </div>
 
@@ -814,7 +823,7 @@
                   <h3 class="section_nine_col_heading">
                     A new fiber produced from Eucalyptus wood chips
                   </h3>
-                  <a href="" class="read_more_sectio_nine">Read More</a>
+                  <a href="Maltica News.html" class="read_more_sectio_nine">Read More ></a>
                 </div>
               </div>
             </div>
