--- a/filecabinet.html
+++ b/filecabinet.html
@@ -37,7 +37,7 @@
             </div>
             <div class="nav_input_div" id="nav_input_div">
              
-                  <i class="fa fa-search " style="font-size:20px;color:#2b758f;"></i>
+                  <i class="fa fa-search " style="font-size:15px;color:#2b758f;"></i>
               <input 
                 type="text"
                 class="nav-input" id="nav-input"
@@ -320,11 +320,12 @@
                 <div class="cabinet_div_row">
                   <div class="cabinet_div_column">
                     <div>
+                      <a href="product_image.html">
                       <img
                         src="images/item_one.PNG"
                         alt=""
                         style="display: block; width: 100%"
-                      />
+                      /></a>
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -341,11 +342,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_two.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                     <a href="product_image.html"><img
+                      src="images/item_two.PNG"
+                      alt=""
+                      style="display: block; width: 100%"
+                    /></a> 
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -361,11 +362,11 @@
                   </div>
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_three.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                     <a href="product_image.html"><img
+                      src="images/item_three.PNG"
+                      alt=""
+                      style="display: block; width: 100%"
+                    /></a> 
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -381,11 +382,11 @@
                   </div>
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_four.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                    <a href="product_image.html"><img
+                      src="images/item_four.PNG"
+                      alt=""
+                      style="display: block; width: 100%"
+                    /></a>  
                     </div>
 
                     <div>
@@ -401,12 +402,12 @@
                     </div>
                   </div>
                   <div class="cabinet_div_column">
-                    <div>
+                    <div> <a href="product_image.html">
                       <img
                         src="images/item_five.PNG"
                         alt=""
                         style="display: block; width: 100%"
-                      />
+                      /></a>
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -423,11 +424,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_six.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                     <a href="product_image.html"><img
+                      src="images/item_six.PNG"
+                      alt=""
+                      style="display: block; width: 100%"
+                    /></a> 
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -442,11 +443,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_seven.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                    <a href="product_image.html"><img
+                      src="images/item_seven.PNG"
+                      alt=""
+                      style="display: block; width: 100%"
+                    /></a>  
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -463,11 +464,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_eight.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                  <a href="product_image.html"><img
+                    src="images/item_eight.PNG"
+                    alt=""
+                    style="display: block; width: 100%"
+                  /></a>    
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -484,11 +485,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_nine.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                   <a href="product_image.html"><img
+                    src="images/item_nine.PNG"
+                    alt=""
+                    style="display: block; width: 100%"
+                  /></a>   
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -505,11 +506,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_ten.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                    <a href="product_image.html"><img
+                      src="images/item_ten.PNG"
+                      alt=""
+                      style="display: block; width: 100%"
+                    /></a>  
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -526,11 +527,12 @@
 
                   <div class="cabinet_div_column">
                     <div>
+                      <a href="product_image.html">
                       <img
                         src="images/item_eleven.PNG"
                         alt=""
                         style="display: block; width: 100%"
-                      />
+                      /></a>
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -547,11 +549,11 @@
 
                   <div class="cabinet_div_column">
                     <div>
-                      <img
-                        src="images/item_twelve.PNG"
-                        alt=""
-                        style="display: block; width: 100%"
-                      />
+                   <a href="product_image.html"> <img
+                    src="images/item_twelve.PNG"
+                    alt=""
+                    style="display: block; width: 100%"
+                  /></a>  
                     </div>
                     <div>
                       <div class="cabinet_colum_heading_div">
@@ -578,8 +580,8 @@
                   color: #2c374d;
                   background-color: rgb(255, 255, 255);
                   text-decoration: none;
-                  padding-inline: 20px;
-                  padding-block: 10px;
+                  padding-inline: 30px;
+                  padding-block: 7px;
                   font-size: 10px;
                   font-family: Poppins-SemiBold;
                   border-radius: 4px;
