--- a/homepage.html
+++ b/homepage.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomePage</title>
+    <link rel="stylesheet" href="slick.css">
+    <link rel="stylesheet" href="slick-theme.css">
     <link rel="stylesheet" href="stylesheet.css" />
     <link rel="stylesheet" href="fontfamily.css" />
+
+
+
+
+    <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+ 
+  
   </head>
   <body>
     <div class="pagewidth">
@@ -196,8 +207,13 @@
     </section>
       <section class="section_two">
         <div class="sectiondiv">
-          <div class="section_two_images_row_div">
-            <div class="rowoneimages">
+          <div class="section_two_images_row_div ">
+
+
+
+
+
+            <div class="rowoneimages responsive">
               <div class="cabinetcol">
                 <img src="images/Layer 60.png" class="cabinetimages" alt="" />
                 <div class="smalltext_div">
@@ -243,6 +259,13 @@
                 </div>
               </div>
             </div>
+
+
+
+
+
+
+
           </div>
         </div>
       </section>
@@ -543,7 +566,7 @@
       <!---------------------------Section Six Home Page----------------->
       <section class="section_six">
         <div class="sectiondiv">
-          <div class="section-six-icon-row">
+          <div class="section-six-icon-row eight_row_carousel">
             <div class="section-six-icon-col">
               <div class="icon-image-div">
                 <img
@@ -722,7 +745,7 @@
           <h2 class="section_eight_heading">
             Fire-Rated Products available in larger quantities
           </h2>
-          <div class="sectioneightrow">
+          <div class="sectioneightrow eight_row_carousel">
             <div class="sectioneightcol">
               <div class="image-div-section-eight">
                 <img
@@ -770,7 +793,7 @@
           <div class="sectiondiv">
             <div class="section_nine_div">
             <h2 class="maltica_section_nine_new_heading">Maltica News</h2>
-            <div class="section_nine_row">
+            <div class="section_nine_row   eight_row_carousel">
               <div class="section_nine_col">
                 <div>
                   <img
@@ -943,7 +966,10 @@
       </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="JavaScript.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="slick.min.js"></script>
     <script
       src="https://kit.fontawesome.com/721e9d1116.js"
       crossorigin="anonymous"
