--- a/homepage.html
+++ b/homepage.html
@@ -467,7 +467,7 @@
       <!-- --------------------------Section Four Home Page --------------->
       <section class="section_four">
         <div class="sectiondiv">
-          <div class="sectionfourrow">
+          <div class="sectionfourrow eight_row_carousel">
             <div class="sectionfourcol">
               <div class="sectionfourrowimagediv">
                 <img
