--- a/homepage.html
+++ b/homepage.html
@@ -538,7 +538,7 @@
       <!-------------------------- Section Five Home Page CSS--------------->
       <section class="section_five">
         <div class="sectiondiv">
-          <div class="section_five_row">
+          <div class="section_five_row five_row_carousel">
             <div class="section_five_col section_five_col_text">
               <h3 class="section_five_col_heading">Next Level Apparel Store</h3>
               <p class="section_five_col_small_text">
